@@ -1,3 +1,8 @@
+2025-01-31 25b
+  * fixed write config values permission, owner
+  * BARControl: fixed abort restore: close dialog
+  * BARControl: fixed restore dialog values
+
 2024-11-10 25a
   * fixed key constrain failed on database import (bug #16)
   * fixed estimated rest time for database import (bug #17)
